deployment/kubernetes/kubeflow/kfp-multi-user/manifests/common/istio-1-9/istio-install/base/deny_all_authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-deny-all
  namespace: istio-system
spec:
  {}
